--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
@@ -36,7 +36,7 @@
                     </p:column>
                     <p:column headerText="#{msgs.actions}">
                         <p:commandLink id="addUsergroup"
-                                       action="#{ProzessverwaltungForm.addUserGroup}"
+                                       action="#{ProcessForm.addUserGroup}"
                                        oncomplete="toggleSave()"
                                        update="editForm:tabs:usergroupTable">
                             <h:graphicImage alt="add task to user group" value="/pages/images/buttons/addUser.gif"/>
