--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -16,9 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="item"
-                 id="propertyTable"
-                 value="#{ProzessverwaltungForm.properties}">
+    <p:dataTable var="item" id="propertyTable" value="#{ProcessForm.properties}">
         <p:column headerText="#{msgs.property}">
             <h:outputText value="#{item.title}"/>
         </p:column>
@@ -31,22 +29,22 @@
                            oncomplete="PF('editPropertyDialog').show()"
                            update="@(.editDialog)">
                 <i class="fa fa-pencil-square-o fa-lg"/>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.property}" value="#{item}"/>
             </p:commandLink>
-            <p:commandLink id="duplicateProperty" title="#{msgs.duplicate}" action="#{ProzessverwaltungForm.duplicateProperty}">
+            <p:commandLink id="duplicateProperty" title="#{msgs.duplicate}" action="#{ProcessForm.duplicateProperty}">
                 <h:outputText><i class="fa fa-files-o fa-lg"/></h:outputText>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.property}" value="#{item}"/>
             </p:commandLink>
             <p:commandLink id="deleteProperty"
                            title="#{msgs.delete}"
                            oncomplete="toggleSave()"
-                           action="#{ProzessverwaltungForm.deleteProperty}">
+                           action="#{ProcessForm.deleteProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.property}" value="#{item}"/>
             </p:commandLink>
         </p:column>
     </p:dataTable>
-    <p:commandButton actionListener="#{ProzessverwaltungForm.createNewProperty()}"
+    <p:commandButton actionListener="#{ProcessForm.createNewProperty()}"
                      id="createNewProperty"
                      oncomplete="PF('editPropertyDialog').show()"
                      update="@(.editDialog)"
