--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -16,9 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable id="templatePropertyTable"
-                 var="property"
-                 value="#{ProzessverwaltungForm.templates}">
+    <p:dataTable id="templatePropertyTable" var="property" value="#{ProcessForm.templates}">
         <p:column headerText="#{msgs.property}">
             <h:outputText value="#{property.title}"/>
         </p:column>
@@ -32,20 +30,20 @@
                            oncomplete="PF('editTemplateDialog').show()"
                            update="@(.editDialog)">
                 <i class="fa fa-pencil-square-o fa-lg"/>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.templateProperty}" value="#{property}"/>
             </p:commandLink>
             <p:commandLink id="deleteTemplateProperty"
                            title="#{msgs.delete}"
                            oncomplete="toggleSave()"
-                           action="#{ProzessverwaltungForm.deleteTemplateProperty}">
+                           action="#{ProcessForm.deleteTemplateProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.templateProperty}" value="#{property}"/>
             </p:commandLink>
         </p:column>
     </p:dataTable>
     <p:commandButton id="addTemplateProperty"
                      value="#{msgs.addTemplateProperty}"
-                     actionListener="#{ProzessverwaltungForm.createTemplateProperty}"
+                     actionListener="#{ProcessForm.createTemplateProperty}"
                      oncomplete="PF('editTemplateDialog').show()"
                      update="@(.editDialog)"
                      icon="fa fa-plus-circle fa-lg"
