--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -16,8 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable id="workpiecePropertyTable" var="property"
-                 value="#{ProzessverwaltungForm.workpieces}">
+    <p:dataTable id="workpiecePropertyTable" var="property" value="#{ProcessForm.workpieces}">
         <p:column headerText="#{msgs.property}">
             <h:outputText value="#{property.title}"/>
         </p:column>
@@ -30,21 +29,21 @@
                            oncomplete="PF('editWorkpieceDialog').show()"
                            update="@(.editDialog)">
                 <i class="fa fa-pencil-square-o fa-lg"/>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.workpieceProperty}" value="#{property}"/>
             </p:commandLink>
             <p:commandLink id="deleteWorkpieceProperty"
                            title="#{msgs.delete}"
-                           action="#{ProzessverwaltungForm.deleteWorkpieceProperty}"
+                           action="#{ProcessForm.deleteWorkpieceProperty}"
                            oncomplete="toggleSave()"
                            update="workpiecePropertyTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
-                <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
+                <f:setPropertyActionListener target="#{ProcessForm.workpieceProperty}" value="#{property}"/>
             </p:commandLink>
         </p:column>
     </p:dataTable>
     <p:commandButton id="addWorkpieceProperty"
                      value="#{msgs.addWorkpieceProperty}"
-                     actionListener="#{ProzessverwaltungForm.createWorkpieceProperty}"
+                     actionListener="#{ProcessForm.createWorkpieceProperty}"
                      update="@(.editDialog)"
                      oncomplete="PF('editWorkpieceDialog').show()"
                      icon="fa fa-plus-circle fa-lg"
