--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
@@ -16,13 +16,13 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="user" value="#{ProzessverwaltungForm.task.users}" id="userTable">
+    <p:dataTable var="user" value="#{ProcessForm.task.users}" id="userTable">
         <p:column headerText="#{msgs.user}">
             <h:outputText value="#{user.surname}, #{user.name}"/>
         </p:column>
 
         <p:column headerText="#{msgs.delete}">
-            <p:commandLink action="#{ProzessverwaltungForm.deleteUser}"
+            <p:commandLink action="#{ProcessForm.deleteUser}"
                            id="deleteUser"
                            title="#{msgs.removeUser}"
                            immediate="true"
