--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml
@@ -36,7 +36,7 @@
                     </p:column>
                     <p:column headerText="#{msgs.actions}">
                         <p:commandLink id="addUser"
-                                       action="#{ProzessverwaltungForm.addUser}"
+                                       action="#{ProcessForm.addUser}"
                                        oncomplete="toggleSave()"
                                        update="editForm:tabs:userTable">
                             <h:graphicImage alt="add task to user" value="/pages/images/buttons/addUser.gif"/>
