--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
@@ -30,9 +30,8 @@
                         <tr>
                             <td class="eingabeBoxen_row2">
                                 <h:outputText value="#{msgs.showDataForProcess}: "/>
-                                <h:selectOneMenu value="#{AktuelleSchritteForm.batchHelper.processName}">
-                                    <f:selectItems var="process"
-                                                   value="#{AktuelleSchritteForm.batchHelper.processNameList}"
+                                <h:selectOneMenu value="#{CurrentTaskForm.batchHelper.processName}">
+                                    <f:selectItems var="process" value="#{CurrentTaskForm.batchHelper.processNameList}"
                                                    itemLabel="#{process}" itemValue="#{process}"/>
                                 </h:selectOneMenu>
                             </td>
@@ -58,7 +57,7 @@
                                     </td>
                                     <td>
                                         <h:outputText
-                                                value="#{AktuelleSchritteForm.batchHelper.currentStep.localizedTitle}"/>
+                                                value="#{CurrentTaskForm.batchHelper.currentStep.localizedTitle}"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -66,7 +65,7 @@
                                         <h:outputText value="#{msgs.processTitle}:"/>
                                     </td>
                                     <td>
-                                        <h:outputText value="#{AktuelleSchritteForm.batchHelper.processName}"/>
+                                        <h:outputText value="#{CurrentTaskForm.batchHelper.processName}"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -74,7 +73,7 @@
                                         <h:outputText value="#{msgs.order}:"/>
                                     </td>
                                     <td>
-                                        <h:outputText value="#{AktuelleSchritteForm.batchHelper.currentStep.ordering}"/>
+                                        <h:outputText value="#{CurrentTaskForm.batchHelper.currentStep.ordering}"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -82,10 +81,10 @@
                                         <h:outputText value="#{msgs.priority}:"/>
                                     </td>
                                     <td>
-                                        <h:outputText value="#{AktuelleSchritteForm.batchHelper.currentStep.priority}"
-                                                      rendered="#{AktuelleSchritteForm.batchHelper.currentStep.priority!=10}"/>
+                                        <h:outputText value="#{CurrentTaskForm.batchHelper.currentStep.priority}"
+                                                      rendered="#{CurrentTaskForm.batchHelper.currentStep.priority!=10}"/>
                                         <h:outputText value="#{msgs.correction}"
-                                                      rendered="#{AktuelleSchritteForm.batchHelper.currentStep.priority==10}"/>
+                                                      rendered="#{CurrentTaskForm.batchHelper.currentStep.priority==10}"/>
                                     </td>
                                 </tr>
                                 <tr>
@@ -94,43 +93,43 @@
                                     </td>
                                     <td>
                                         <h:outputText
-                                                value="#{AktuelleSchritteForm.batchHelper.currentStep.processingStatusEnum.title}"/>
+                                                value="#{CurrentTaskForm.batchHelper.currentStep.processingStatusEnum.title}"/>
                                     </td>
                                 </tr>
 
                                 <ui:fragment
-                                        rendered="#{AktuelleSchritteForm.batchHelper.currentStep.processingBegin !=null and !HelperForm.anonymized}">
+                                        rendered="#{CurrentTaskForm.batchHelper.currentStep.processingBegin !=null and !HelperForm.anonymized}">
                                     <tr>
                                         <td width="150">
                                             <h:outputText value="#{msgs.processingBegin}:"/>
                                         </td>
                                         <td>
                                             <h:outputText
-                                                    value="#{AktuelleSchritteForm.batchHelper.currentStep.processingBeginAsFormattedString}"/>
+                                                    value="#{CurrentTaskForm.batchHelper.currentStep.processingBeginAsFormattedString}"/>
                                         </td>
                                     </tr>
                                 </ui:fragment>
                                 <ui:fragment
-                                        rendered="#{AktuelleSchritteForm.batchHelper.currentStep.processingTime !=null and !HelperForm.anonymized}">
+                                        rendered="#{CurrentTaskForm.batchHelper.currentStep.processingTime !=null and !HelperForm.anonymized}">
                                     <tr>
                                         <td width="150">
                                             <h:outputText value="#{msgs.lastEdited}:"/>
                                         </td>
                                         <td>
                                             <h:outputText
-                                                    value="#{AktuelleSchritteForm.batchHelper.currentStep.processingTimeAsFormattedString}"/>
+                                                    value="#{CurrentTaskForm.batchHelper.currentStep.processingTimeAsFormattedString}"/>
                                         </td>
                                     </tr>
                                 </ui:fragment>
                                 <ui:fragment
-                                        rendered="#{AktuelleSchritteForm.batchHelper.currentStep.processingTime !=null and !HelperForm.anonymized}">
+                                        rendered="#{CurrentTaskForm.batchHelper.currentStep.processingTime !=null and !HelperForm.anonymized}">
                                     <tr>
                                         <td width="150">
                                             <h:outputText value="#{msgs.updateType}:"/>
                                         </td>
                                         <td>
                                             <h:outputText
-                                                    value="#{AktuelleSchritteForm.batchHelper.currentStep.editTypeEnum.title}"/>
+                                                    value="#{CurrentTaskForm.batchHelper.currentStep.editTypeEnum.title}"/>
                                         </td>
                                     </tr>
                                 </ui:fragment>
@@ -143,24 +142,24 @@
                 <table>
                     <tr>
                         <td style="border: 1px solid lightgray; height: 100px;">
-                            <h:outputText escape="false" value="#{AktuelleSchritteForm.batchHelper.wikiField}"/>
+                            <h:outputText escape="false" value="#{CurrentTaskForm.batchHelper.wikiField}"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <h:form id="addToWikiForm"
-                                    rendered="#{AktuelleSchritteForm.batchHelper.currentStep.processingUser.id == LoginForm.myBenutzer.id}">
+                                    rendered="#{CurrentTaskForm.batchHelper.currentStep.processingUser.id == LoginForm.myBenutzer.id}">
                                 <h:panelGrid>
                                     <h:panelGroup>
                                         <h:inputText id="addToTextArea"
-                                                     value="#{AktuelleSchritteForm.batchHelper.addToWikiField}"
+                                                     value="#{CurrentTaskForm.batchHelper.addToWikiField}"
                                                      style="width: 100%"/>
                                     </h:panelGroup>
                                     <h:panelGroup>
                                         <h:commandButton value="#{msgs.addMessage}"
-                                                         action="#{AktuelleSchritteForm.batchHelper.addToWikiField}"/>
+                                                         action="#{CurrentTaskForm.batchHelper.addToWikiField}"/>
                                         <h:commandButton value="#{msgs.addMessageForAll}"
-                                                         action="#{AktuelleSchritteForm.batchHelper.addToWikiFieldForAll}"/>
+                                                         action="#{CurrentTaskForm.batchHelper.addToWikiFieldForAll}"/>
                                     </h:panelGroup>
                                 </h:panelGrid>
                             </h:form>
