--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskList.xhtml
@@ -18,7 +18,7 @@
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable id="taskTable"
                  var="item"
-                 value="#{AktuelleSchritteForm.lazyDTOModel}"
+                 value="#{CurrentTaskForm.lazyDTOModel}"
                  lazy="true"
                  paginator="true"
                  rows="#{LoginForm.myBenutzer.tableSize}"
@@ -43,11 +43,11 @@
         <p:column headerText="#{msgs.actions}">
             <h:form>
                 <!-- assign task -->
-                <h:commandLink id="take" action="#{AktuelleSchritteForm.schrittDurchBenutzerUebernehmen}"
+                <h:commandLink id="take" action="#{CurrentTaskForm.schrittDurchBenutzerUebernehmen}"
                                rendered="#{(item.processingStatus == 'OPEN' and !item.batchStep) || (item.processingStatus == 'OPEN' and item.batchStep and !item.batchAvailable)}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <i class="fa fa-bell-o"/>
-                    <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
+                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(item.id)}"/>
                 </h:commandLink>
                 <!-- already assigned task (this user) -->
                 <h:link outcome="/pages/currentTasksEdit"
@@ -57,35 +57,35 @@
                     <f:param name="id" value="#{item.id}"/>
                 </h:link>
                 <!-- already assigned task (different user) -->
-                <h:commandLink action="#{AktuelleSchritteForm.editStep}" id="view2"
+                <h:commandLink action="#{CurrentTaskForm.editStep}" id="view2"
                                rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and (!item.batchStep || !item.batchAvailable)}"
                                title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                     <i class="fa fa-bell-slash"/>
-                    <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
+                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(item.id)}"/>
                 </h:commandLink>
 
                 <!-- take over batch -->
-                <h:commandLink id="batch" action="#{AktuelleSchritteForm.takeOverBatchTasks}"
+                <h:commandLink id="batch" action="#{CurrentTaskForm.takeOverBatchTasks}"
                                rendered="#{item.processingStatus == 'OPEN' and item.batchStep and item.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3a.gif" alt="edit"/>
-                    <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
+                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(item.id)}"/>
                 </h:commandLink>
 
                 <!-- edit batch step (this user) -->
-                <h:commandLink id="batchInWork" action="#{AktuelleSchritteForm.editBatchTasks}"
+                <h:commandLink id="batchInWork" action="#{CurrentTaskForm.editBatchTasks}"
                                rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3.gif" alt="edit"/>
-                    <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
+                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(item.id)}"/>
                 </h:commandLink>
 
                 <!-- edit batch step (different user) -->
-                <h:commandLink id="batchInWorkOther" action="#{AktuelleSchritteForm.editBatchTasks}"
+                <h:commandLink id="batchInWorkOther" action="#{CurrentTaskForm.editBatchTasks}"
                                rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                     <h:graphicImage value="/pages/images/buttons/admin3c.gif" alt="edit"/>
-                    <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
+                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(item.id)}"/>
                 </h:commandLink>
             </h:form>
         </p:column>
