--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
@@ -38,9 +38,9 @@
                 <!-- assign task -->
                 <h:commandLink id="take" action="#{CurrentTaskForm.schrittDurchBenutzerUebernehmen}"
                                rendered="#{(task.processingStatus == 'OPEN' and !task.batchStep) || (task.processingStatus == 'OPEN' and task.batchStep and !task.batchAvailable)}"
-                               title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
+                               title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}" icon="fa fa-bell-o">
                     <h:outputText><i class="fa fa-bell-o"/></h:outputText>
-                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(task.id)}"/>
+                    <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
                 <!-- already assigned task (this user) -->
                 <h:link outcome="/pages/currentTasksEdit"
@@ -54,7 +54,7 @@
                                rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id != LoginForm.myBenutzer.id and (!task.batchStep || !task.batchAvailable)}"
                                title="#{msgs.inBearbeitungDurch}: #{(task.processingUser!=null and task.processingUser.id!=0 ? task.processingUser.fullName : '')}">
                     <h:outputText><i class="fa fa-bell-slash"/></h:outputText>
-                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(task.id)}"/>
+                    <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
 
                 <!-- take over batch -->
@@ -62,7 +62,7 @@
                                rendered="#{task.processingStatus == 'OPEN' and task.batchStep and task.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3a.gif" alt="edit"/>
-                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(task.id)}"/>
+                    <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
 
                 <!-- edit batch step (this user) -->
@@ -70,7 +70,7 @@
                                rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.myBenutzer.id and task.batchStep and task.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3.gif" alt="edit"/>
-                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(task.id)}"/>
+                    <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
 
                 <!-- edit batch step (different user) -->
@@ -78,7 +78,7 @@
                                rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id != LoginForm.myBenutzer.id and task.batchStep and task.batchAvailable}"
                                title="#{msgs.inBearbeitungDurch}: #{(task.processingUser!=null and task.processingUser.id!=0 ? task.processingUser.fullName : '')}">
                     <h:graphicImage value="/pages/images/buttons/admin3c.gif" alt="edit"/>
-                    <f:setPropertyActionListener target="#{CurrentTaskForm.currentTask}" value="#{CurrentTaskForm.getTaskById(task.id)}"/>
+                    <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
                 </h:commandLink>
             </h:form>
         </p:column>
